[tool.poetry]
name = "template-parser"
version = "0.1.0"
description = ""
authors = ["James Biddle <james.biddle@defence.gov.au>"]
readme = "README.md"
packages = [{include = "template_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.9.3"
ttp = "^0.9.4"
textfsm = "^1.1.3"
dash-bootstrap-components = "^1.4.1"
dash-editor-components = "^0.0.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
